--- a/volunteers.css
+++ b/volunteers.css
@@ -307,7 +307,9 @@
 .volunteer-avatar img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    object-position: center;
+    background: #fff;
 }
 
 .volunteer-info {
@@ -683,13 +685,14 @@
 .profile-avatar img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    object-position: center;
+    background: #fff;
 }
 
 .profile-info h3 {
     color: #8B4513;
     margin-bottom: 0.5rem;
-}
 
 .profile-role {
     color: #FF8C00;
